--- a/index.html
+++ b/index.html
@@ -27,14 +27,24 @@
         </header>
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exciting tours for adventurous people.
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text Content
+                        <h3 class="heading-tertiary u-margin-bottom-small">You are going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed ab sequi laboriosam labore fuga dolorem qui at ullam nobis fugit, porro, error corporis expedita sint voluptatibus. Eum nisi debitis dolor!
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before.</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error qui quibusdam sapiente eius odio? Iste temporibus similique maxime.
+                        </p>
+
+                        <a href="#" class="btn-text">Learn More &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         Image Composition
